fix heading alignments

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -317,9 +317,9 @@ thead {
 
 .footer {
 	font-weight: 100;
-	font-size: 0.25rem;
+	font-size: 0.5rem;
 	letter-spacing: 0rem;
-	margin: 4rem 0 4rem 0rem;
+	margin: 8rem 0 4rem 1.75rem;
 }
 
 /*CALENDAR*/
